<resources>
    <string name="app_name">Oxygen Condensator</string>
    <string name="welcome_text_1">Добро пожаловать!</string>
    <string name="welcome_desc_1">Регулируйте ваш кислородный конденсатор удалённо</string>
    <string name="welcome_button">Далее</string>

    <string name="welcome_text_2">Удобство</string>
    <string name="welcome_desc_2">Следите за здоровьем где, сколько и когда угодно</string>

    <string name="welcome_text_3">Уверенность</string>
    <string name="welcome_desc_3">При угрозе вашему состоянию, приложение уведомит вас</string>

    <string name="welcome_text_4">Мониторинг</string>
    <string name="welcome_desc_4">Отправляйте вашему врачу свои показатели и улучшайте ваш план лечения</string>


    <string name="statistic_text_nostat">Начните кислородную терапию</string>
    <string name="nostatistic">Текущая статистика</string>
    <string name="todaytherdlit">Сегодняшняя терапия длилась</string>
    <string name="minut">минут</string>
    <string name="starttherapy">Начать терапию</string>
    <string name="endtherapy">Закончить терапию</string>
    <string name="averagesaturation">Средняя сатурация</string>
    <string name="averagepulse">Средний пульс</string>
    <string name="detailedinfo">Подробная информация</string>
    <string name="shareinfo">Поделиться данными</string>

    <string name="connectoxymeter">Подключение к оксиметру</string>
    <string name="litrinmin">л/мин</string>
    <string name="saturation">Сатурация</string>
    <string name="duration">Длительность</string>
    <string name="auto">Автоматический режим</string>


    <string name="infother">Информация о терапиях</string>
    <string name="share">Поделиться</string>


    <string name="title_activity_statistic">StatisticActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="settings">Настройки</string>
    <string name="accountname">Имя аккаунта:</string>
    <string name="changepass">Смена пароля</string>
    <string name="oldpass">Старый пароль:</string>
    <string name="inputoldpass">Введите старый пароль..</string>
    <string name="newpass">Новый пароль:</string>
    <string name="inputnewpass">Введите новый пароль..</string>
    <string name="change">Сменить</string>
    <string name="back">Назад</string>
    <string name="exitaccount">Выйти из аккаунта</string>


    <string name="accountinfo">Информация аккаунта</string>
    <string name="fio">ФИО:</string>
    <string name="age">Возраст</string>
    <string name="nameill">Название болезни:</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>