<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".settingsactivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:text="@string/settings"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:text="@string/accountname"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/accountnametextset"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:text="TextView"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:text="@string/changepass"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/oldpass"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/oldpasswordedit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-7dp"
        android:ems="10"
        android:hint="@string/inputoldpass"
        android:textSize="15sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintStart_toEndOf="@+id/textView21" />

    <EditText
        android:id="@+id/newpasswordedit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="-7dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/inputnewpass"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/oldpasswordedit" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/newpass"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <Button
        android:id="@+id/changebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountexit" />

    <TextView
        android:id="@+id/wrongpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#F44336"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <Button
        android:id="@+id/accountexit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#B3B3B3"
        android:text="@string/exitaccount"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/changebutton" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Email:"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/textView24" />
</androidx.constraintlayout.widget.ConstraintLayout>