<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StatisticActivity">

    <ImageButton
        android:id="@+id/settingsbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle"
        android:contentDescription="d"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/accountbutton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/accountbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/circle"
        android:contentDescription="d"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/ifstatistictext"
        android:layout_width="312dp"
        android:fontFamily="@font/inter_bold"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:text="@string/statistic_text_nostat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:text="@string/nostatistic"
        android:textSize="20dp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifstatistictext" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/todaytherdlit"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/todaytherdur"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:paddingRight="10dp"
        android:layout_marginTop="23dp"
        android:textSize="38sp"
        android:fontFamily="@font/inter"
        android:text="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="100dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/minut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/todaytherdur"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/startbutton"
        android:layout_width="315dp"
        android:layout_height="78dp"
        android:layout_marginTop="327dp"
        android:text="@string/starttherapy"
        android:textSize="18sp"
        android:background="@drawable/rounded"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todaytherdur" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="311dp"
        android:layout_height="235dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todaytherdur"
        android:backgroundTint="#D9D9D9" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:textColor="@color/black"
        android:layout_marginTop="38dp"
        android:textSize="16dp"
        android:text="@string/averagesaturation"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:text="@string/averagepulse"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/averagesaturationtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textAlignment="textEnd"
        android:fontFamily="@font/inter"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/averagepulsetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textAlignment="textEnd"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="26dp"
        android:layout_height="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsbutton"
        app:layout_constraintEnd_toEndOf="@+id/settingsbutton"
        app:layout_constraintStart_toStartOf="@+id/settingsbutton"
        app:layout_constraintTop_toTopOf="@+id/settingsbutton"
        app:srcCompat="@drawable/shest" />

    <TextView
        android:id="@+id/accountnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/accountbutton"
        app:layout_constraintEnd_toEndOf="@+id/accountbutton"
        app:layout_constraintStart_toStartOf="@+id/accountbutton"
        app:layout_constraintTop_toTopOf="@+id/accountbutton" />

    <Button
        android:id="@+id/buttoninfo"
        android:layout_width="135dp"
        android:layout_height="89dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="13dp"
        android:text="@string/detailedinfo"
        android:backgroundTint="#F5F5F5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <Button
        android:id="@+id/sharefile"
        android:layout_width="135dp"
        android:layout_height="90dp"
        android:layout_marginStart="13dp"
        android:text="@string/shareinfo"
        android:backgroundTint="#F5F5F5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/buttoninfo"
        app:layout_constraintStart_toEndOf="@+id/buttoninfo" />


</androidx.constraintlayout.widget.ConstraintLayout>