<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".CondensatorActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/ic_welcome_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autocheckBox" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="330dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded"
        android:backgroundTint="#F5F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/tsend"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/tsend" />

    <Button
        android:id="@+id/bconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:text="Connect"
        app:layout_constraintBottom_toTopOf="@+id/endbutton"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/sbutton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Send message"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/tsend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/inter"
        android:text="X"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/bsend1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="X"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/endbutton"
        android:layout_width="258dp"
        android:layout_height="78dp"
        android:layout_marginBottom="79dp"
        android:text="@string/endtherapy"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="45dp"
        android:text="@string/connectoxymeter"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/endbutton"
        app:layout_constraintEnd_toStartOf="@+id/bconnect" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/saturation"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tsend"
        app:layout_constraintStart_toStartOf="@+id/tsend"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="9dp"
        android:text="@string/litrinmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsend1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10" />

    <ImageButton
        android:id="@+id/image_plus"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/circle"
        android:clickable="false"
        android:contentDescription="d"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/image_minus"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circle"
        android:clickable="false"
        android:contentDescription="d"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="@+id/image_minus"
        app:layout_constraintEnd_toEndOf="@+id/image_minus"
        app:layout_constraintStart_toStartOf="@+id/image_minus"
        app:layout_constraintTop_toTopOf="@+id/image_minus" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="@+id/image_plus"
        app:layout_constraintEnd_toEndOf="@+id/image_plus"
        app:layout_constraintStart_toStartOf="@+id/image_plus"
        app:layout_constraintTop_toTopOf="@+id/image_plus" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <CheckBox
        android:id="@+id/autocheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:checked="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/auto"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>